--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
 
   <!-- favicon  -->
-  <link rel = "icon" href="img/logo.jpg">
+  <link rel = "icon" href="img/logo.png">
 
 
   <!-- Plugin CSS -->
