--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
 
 
   <!-- Privacy policy section -->
-  <section class="page-section bg-primary" id="about">
+  <section class="page-section bg-primary" id="privacypolicy">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
