--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive"> 
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="about.html">About</a>
+            <a class="nav-link js-scroll-trigger" href="about.html/">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#services">Services</a>
@@ -74,7 +74,7 @@
   </header>
 
   <!-- About Section -->
-  <section class="page-section bg-primary" id="about">
+  <section class="page-section bg-primary" id="">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
