modified return link in about.html

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="text-white mt-0 js-scroll-trigger" href="index.html/">Ma Dayanitha Foundation </h2>
+          <h2 class="text-white mt-0 " ><a js-scroll-trigger href="index.html">Ma Dayanitha Foundation</a></h2>
           <hr class="divider light my-4">
           <p class="text-white-50 mb-4">Thanks for taking your time and following MaaDayanitha Global Foundation.  We truly appreciate it and heartly welcomes you to our family. we are a charitable trust focusing on spreading the message of HH Ma Dayanitha Devi's  love and compassion to those who need it the most. We primarily focus on people from less privileged sections of the society by providing medical assistance to Newborns and elderly, Holistic education for children, Improving maternal Health Access to essential maternity care for vulnerable mothers , providing financial assistance for medical bills, Preventing malnutrition etc. We expect your esteemed cooperation in supporting these causes. </p>
           
